# llm-pro

./: .gitignore  main.py  pyproject.toml
Prompt Engineering For Developers/: 2. 提示原则 Guidelines.ipynb
api编程/01-快速接入/: 01-快速接入模型.py  02-封装各大产商模型.ipynb  03-支持的模型.ipynb  04-非sdk访问.ipynb
api编程/02-文本模态/: 01-返回值.ipynb  02-Chat模型的使用.ipynb  03-多轮对话.ipynb  04-流式输出.ipynb  05-异步处理.ipynb
api编程/03-多模态/: 多模态测试.ipynb
作业/api编程课后作业/: 1.多轮对话-滑动窗口.ipynb  2.多轮对话-摘要压缩法.ipynb  作业.md  发票解析-openai.ipynb  发票解析.ipynb
作业/行业分类数据打标/: 作业.md
作业/行业分类数据打标/模型评测/: log  mmlu_evaluation_dataset.xlsx  v2.0-log  模型测试v1.0.py  模型测试v2.0.py  评测集excel.py
作业/行业分类数据打标/论文复现/: Chain-of-Thought.ipynb  Language Models are Few-Shot Learners.ipynb  Large Language Models are Zero-Shot Reasoners.ipynb  论文总结.md
提示词/: 06-提示测case演练.ipynb  评测测试.ipynb
