[project]
name = "llm-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "modelscope[dataset,framework]>=1.35.4",
    "numpy>=2.4.4",
    "openai>=2.28.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
]
